# ghexedit

./: CMakeLists.txt  README.md  ghexedit.desktop.in  ghexedit.gschema.xml  ghexedit.gschema.xml.in
gresource/: AppPrefs.ui  AppWindow.ui  CMakeLists.txt  ghexedit.gresource.xml.in
gresource/gtk/: menus.ui
src/: CMakeLists.txt  appid.h.in  main.c  version.h.in
src/classes/: App.c  App.h  AppPrefs.c  AppPrefs.h  AppWin.c  AppWin.h  CMakeLists.txt  HexView.c  HexView.h
